--- a/templates/actualizar.html
+++ b/templates/actualizar.html
@@ -16,8 +16,8 @@
         <!-- Utiliza clases de Bootstrap para los formularios -->
         <form>
             <div class="mb-3">
-                <label for="actualizar-id" class="form-label">ID del contacto a actualizar:</label>
-                <input type="number" class="form-control" id="actualizar-id" placeholder="ID del contacto a actualizar">
+                <label for="actualizar-id" class="form-label">Email del contacto a actualizar:</label>
+                <input type="text" class="form-control" id="actualizar-id" placeholder="ID del contacto a actualizar">
             </div>
             <div class="mb-3">
                 <label for="actualizar-nombre" class="form-label">Nuevo nombre:</label>
@@ -52,7 +52,6 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 
     <script>
-        // Puedes mantener el script aquí si lo necesitas
     </script>
 </body>
 </html>
