--- a/templates/actualizar.html
+++ b/templates/actualizar.html
@@ -16,8 +16,8 @@
         <!-- Utiliza clases de Bootstrap para los formularios -->
         <form>
             <div class="mb-3">
-                <label for="actualizar-id" class="form-label">Email del contacto a actualizar:</label>
-                <input type="text" class="form-control" id="actualizar-id" placeholder="ID del contacto a actualizar">
+                <label for="actualizar-email" class="form-label">Email del contacto a actualizar:</label>
+                <input type="text" class="form-control" id="actualizar-email" placeholder="Email del contacto a actualizar">
             </div>
             <div class="mb-3">
                 <label for="actualizar-nombre" class="form-label">Nuevo nombre:</label>
@@ -30,10 +30,6 @@
             <div class="mb-3">
                 <label for="actualizar-apellido-materno" class="form-label">Nuevo apellido materno:</label>
                 <input type="text" class="form-control" id="actualizar-apellido-materno" placeholder="Nuevo apellido materno">
-            </div>
-            <div class="mb-3">
-                <label for="actualizar-email" class="form-label">Nuevo email:</label>
-                <input type="text" class="form-control" id="actualizar-email" placeholder="Nuevo email">
             </div>
             <div class="mb-3">
                 <label for="actualizar-telefono" class="form-label">Nuevo teléfono:</label>
