--- a/templates/borrar.html
+++ b/templates/borrar.html
@@ -3,26 +3,24 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Borrar Contacto</title>
-    <!-- Agrega el enlace a Bootstrap CSS -->
+    <title>Eliminar Contacto</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../static/css/styles.css">
-    <script src="../static/js/borrar.js"></script>
-    <script src="../static/js/listar.js"></script> 
+    <script src="../static/js/eliminar.js"></script>
 </head>
 <body>
-    <div class="container mt-5">
-        <h2>Borrar Contacto</h2>
-            <ul id="lista-contactos"></ul>
-        <div class="form-group">
-            <input type="number" class="form-control" id="borrar-id" placeholder="ID del contacto a borrar">
-        </div>
-        
-        <button class="btn btn-danger" onclick="borrarContacto()">Borrar Contacto</button>
-        <a href="/inicio" class="btn btn-secondary">Cancelar</a>
+    <div class="container">
+        <h2 class="mt-5">Eliminar Contacto</h2>
+        <form>
+            <div class="mb-3">
+                <label for="eliminar-email" class="form-label">Email del contacto a eliminar:</label>
+                <input type="text" class="form-control" id="eliminar-email" placeholder="Email del contacto a eliminar">
+            </div>
+            <div class="mb-3">
+                <button type="button" class="btn btn-danger" onclick="eliminarContacto()">Eliminar Contacto</button>
+            </div>
+        </form>
     </div>
-
-    <!-- Agrega el enlace a Bootstrap JS y Popper.js (necesario para algunos componentes de Bootstrap) -->
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
 </body>
 </html>
