--- a/templates/index.html
+++ b/templates/index.html
@@ -9,6 +9,14 @@
     <link rel="stylesheet" href="../static/css/styles.css">
     <script src="../static/js/listar.js"></script>  
     <script src="../static/js/get_all.js"></script>   
+    <script>
+        // Verificar si el token está presente en el LocalStorage
+        const token = localStorage.getItem('token');
+        if (!token) {
+            // Si no hay token, redirige al usuario a la página de inicio de sesión
+            window.location.href = "/login.html";
+        }
+    </script>
 </head>
 <body>
     <div class="container">
