--- a/templates/actualizar.html
+++ b/templates/actualizar.html
@@ -8,6 +8,14 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <link rel="stylesheet" href="../static/css/styles.css">
     <script src="../static/js/actualizar.js"></script> 
+    <script>
+        // Verificar si el token está presente en el LocalStorage
+        const token = localStorage.getItem('token');
+        if (!token) {
+            // Si no hay token, redirige al usuario a la página de inicio de sesión
+            window.location.href = "/login.html";
+        }
+    </script>
 </head>
 <body>
     <div class="container">
