--- a/templates/index.html
+++ b/templates/index.html
@@ -14,7 +14,7 @@
         const token = localStorage.getItem('token');
         if (!token) {
             // Si no hay token, redirige al usuario a la página de inicio de sesión
-            window.location.href = "/login.html";
+            window.location.href = "/";
         }
     </script>
 </head>
