--- a/templates/agregar.html
+++ b/templates/agregar.html
@@ -10,7 +10,7 @@
     <script src="../static/js/agregar.js"></script> 
     <script>
         // Verificar si el token está presente en el LocalStorage
-        const token = localStorage.getItem('token');
+        const token = sessionStorage.getItem('token');
         if (!token) {
             // Si no hay token, redirige al usuario a la página de inicio de sesión
             window.location.href = "/";
